# open-media

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  continue-plan.md  flake.nix  future-features.md  next-task.md  release-plz.toml
.github/: SMOKE_ACTIONS
.github/workflows/: ci.yml  guard-master.yml  manual-version-bump.yml  release.yml
crates/om-app/: Cargo.toml
crates/om-app/src/: lib.rs
crates/om-cli/: Cargo.toml
crates/om-cli/src/: compose.rs  login.rs  main.rs  telemetry.rs  tui.rs
crates/om-cli/tests/: live_realdebrid.rs  pipeline_e2e.rs
crates/om-config/: Cargo.toml
crates/om-config/src/: lib.rs
crates/om-core/: Cargo.toml
crates/om-core/src/: error.rs  lib.rs  model.rs  ports.rs  scoring.rs  stream.rs  subtitle.rs  tracking.rs
crates/om-debrid/: Cargo.toml
crates/om-debrid/src/: lib.rs  realdebrid.rs
crates/om-debrid/tests/: realdebrid_e2e.rs
crates/om-history/: Cargo.toml
crates/om-history/src/: lib.rs
crates/om-metadata/: Cargo.toml
crates/om-metadata/src/: anilist.rs  cinemeta.rs  lib.rs  tmdb.rs
crates/om-metadata/tests/: metadata_e2e.rs
crates/om-player/: Cargo.toml
crates/om-player/src/: lib.rs  mpv.rs  vlc.rs
crates/om-player/tests/: mpv_ipc_e2e.rs  real_mpv.rs
crates/om-sources/: Cargo.toml
crates/om-sources/src/: lib.rs  nyaa.rs  season.rs  tags.rs  torrentio.rs
crates/om-sources/tests/: sources_e2e.rs
crates/om-stream/: Cargo.toml
crates/om-stream/src/: lib.rs  p2p.rs
crates/om-stream/tests/: p2p_server.rs
crates/om-subs/: Cargo.toml
crates/om-subs/src/: lib.rs
crates/om-telemetry/: Cargo.toml
crates/om-telemetry/src/: lib.rs
crates/om-track/: Cargo.toml
crates/om-track/src/: anilist.rs  aniskip.rs  composite.rs  discord.rs  ipc.rs  lib.rs  mal.rs
crates/om-track/tests/: track_e2e.rs
crates/open-media-app/: Cargo.toml
crates/open-media-app/src/: builder.rs  lib.rs  library.rs  playback.rs  playlist.rs  search.rs  sources.rs  tests.rs
crates/open-media-cli/: Cargo.toml
crates/open-media-cli/src/: compose.rs  login.rs  main.rs  mal_oauth.rs  stills.rs  telemetry.rs  tui.rs
crates/open-media-cli/src/tui/: draw.rs  input.rs  layout.rs  mod.rs  mouse.rs  state.rs  tests.rs
crates/open-media-cli/tests/: live_realdebrid.rs  pipeline_e2e.rs
crates/open-media-config/: Cargo.toml
crates/open-media-config/src/: lib.rs
crates/open-media-core/: Cargo.toml
crates/open-media-core/src/: episode_discover.rs  error.rs  lib.rs  model.rs  ports.rs  scoring.rs  title.rs  tracking.rs  usage.rs
crates/open-media-debrid/: Cargo.toml
crates/open-media-debrid/src/: lib.rs  realdebrid.rs  torbox.rs
crates/open-media-debrid/tests/: realdebrid_e2e.rs  torbox_e2e.rs
crates/open-media-history/: Cargo.toml
crates/open-media-history/src/: lib.rs
crates/open-media-metadata/: Cargo.toml
crates/open-media-metadata/src/: anilist.rs  bridge.rs  cinemeta.rs  jikan.rs  lib.rs  tmdb.rs
crates/open-media-metadata/tests/: bridge_e2e.rs  metadata_e2e.rs
crates/open-media-net/: Cargo.toml
crates/open-media-net/src/: lib.rs
crates/open-media-player/: Cargo.toml
crates/open-media-player/src/: ipc.rs  lib.rs  mpv.rs  vlc.rs
crates/open-media-player/tests/: mpv_ipc_e2e.rs  real_mpv.rs
crates/open-media-sources/: Cargo.toml
crates/open-media-sources/src/: lib.rs  nyaa.rs  season.rs  tags.rs  torrentio.rs
crates/open-media-sources/tests/: sources_e2e.rs
crates/open-media-stream/: Cargo.toml
crates/open-media-stream/src/: lib.rs  p2p.rs
crates/open-media-stream/tests/: p2p_server.rs
crates/open-media-subs/: Cargo.toml
crates/open-media-subs/src/: lib.rs
crates/open-media-telemetry/: Cargo.toml
crates/open-media-telemetry/src/: lib.rs
crates/open-media-track/: Cargo.toml
crates/open-media-track/src/: anilist.rs  aniskip.rs  composite.rs  discord.rs  ipc.rs  lib.rs  mal.rs
crates/open-media-track/tests/: track_e2e.rs
docs/: ARCHITECTURE.md  LEGAL.md  PLAN.md  RESEARCH.md  ROADMAP.md
