[workspace]
resolver = "2"
members = [
    "crates/open-media-core",
    "crates/open-media-net",
    "crates/open-media-config",
    "crates/open-media-metadata",
    "crates/open-media-sources",
    "crates/open-media-debrid",
    "crates/open-media-stream",
    "crates/open-media-player",
    "crates/open-media-subs",
    "crates/open-media-track",
    "crates/open-media-history",
    "crates/open-media-telemetry",
    "crates/open-media-app",
    "crates/open-media-cli",
]

[workspace.package]
version = "0.6.2"
edition = "2021"
# Minimum supported Rust version. Pinned conservatively; CI uses stable (>= this)
# and the nix devshell's rustc is canonical.
rust-version = "1.82"
license = "MIT"
authors = ["Grok Insider <admin@grokinsider.net>"]
repository = "https://github.com/grok-insider/open-media"

[workspace.dependencies]
# --- Internal crates (path deps) ---
# The `version` requirement is required by `cargo package` (which release-plz runs
# to detect changes); release-plz keeps these in lockstep with the workspace
# version on every bump. They are never published — `path` always wins for builds.
open-media-core = { path = "crates/open-media-core", version = "0.6.2" }
open-media-net = { path = "crates/open-media-net", version = "0.6.2" }
open-media-config = { path = "crates/open-media-config", version = "0.6.2" }
open-media-metadata = { path = "crates/open-media-metadata", version = "0.6.2" }
open-media-sources = { path = "crates/open-media-sources", version = "0.6.2" }
open-media-debrid = { path = "crates/open-media-debrid", version = "0.6.2" }
open-media-stream = { path = "crates/open-media-stream", version = "0.6.2" }
open-media-player = { path = "crates/open-media-player", version = "0.6.2" }
open-media-subs = { path = "crates/open-media-subs", version = "0.6.2" }
open-media-track = { path = "crates/open-media-track", version = "0.6.2" }
open-media-history = { path = "crates/open-media-history", version = "0.6.2" }
open-media-telemetry = { path = "crates/open-media-telemetry", version = "0.6.2" }
open-media-app = { path = "crates/open-media-app", version = "0.6.2" }

# --- Shared third-party deps (versions pinned once here; see ARCHITECTURE.md) ---
# Kept light in the scaffold. Heavy adapter deps (reqwest, librqbit, rusqlite)
# are added to their owning crate as each phase lands — NOT here — so the core
# contract stays I/O-free and the workspace builds fast.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
# Random per-install id for anonymous usage analytics (UUID v4).
uuid = { version = "1", features = ["v4"] }
# HTTP + parsing for the network adapters.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
futures = "0.3"
regex = "1"
quick-xml = { version = "0.38", features = ["serialize"] }
# Test-only: in-process mock HTTP server for adapter e2e/integration tests.
wiremock = "0.6"

# Release profile for the shipped `open-media` binary. Streaming startup latency matters
# more than build time (CI/cache absorbs the longer build): thin LTO + one
# codegen unit for cross-crate inlining on the resolve/stream path; strip for a
# smaller binary. panic = "unwind" stays (the playback loop recovers from a
# failed source by falling through to the next candidate; a panic must not abort
# mid-session cleanup of the torrent/debrid state).
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Repo-wide lints so `cargo clippy` and editors surface the same gate CI enforces
# with `-D warnings`. "warn" here (CI denies); priority -1 lets local
# `#[allow(...)]` override where justified.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
