[package]
name = "om-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-media CLI/TUI binary (`om`): the composition root that wires adapters to the engine."

[[bin]]
name = "om"
path = "src/main.rs"

[dependencies]
om-core = { workspace = true }
om-config = { workspace = true }
om-app = { workspace = true }
# Adapter crates — om-cli is the ONLY crate allowed to depend on concrete
# adapters, because it is the composition root (DIP).
om-metadata = { workspace = true }
om-sources = { workspace = true }
om-debrid = { workspace = true }
om-stream = { workspace = true }
om-player = { workspace = true }
om-subs = { workspace = true }
om-track = { workspace = true }
om-history = { workspace = true }
om-telemetry = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
# Terminal image protocols (kitty/sixel/iTerm2) for episode stills + posters.
# default-features off to drop the optional libchafa C dependency; the built-in
# unicode-halfblocks fallback covers terminals without a graphics protocol.
# `image` is decode-only (JPEG/PNG/WebP — what TMDB/Cinemeta/AniList serve);
# stills are fetched over the shared workspace reqwest client.
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
