[package]
name = "om-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-media configuration: schema, load/save, XDG paths, secrets policy."

[dependencies]
om-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
