[package]
name = "om-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HistoryStore: local watch-progress persistence for resume + recents."

[dependencies]
om-core = { workspace = true }
# Phase 7: add `rusqlite` (bundled) for the SQLite-backed store. A SQLite file
# is preferred over curd's full-file-rewrite CSV for concurrent-safe updates.

[lints]
workspace = true
