[package]
name = "om-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HistoryStore: local watch-progress persistence for resume + recents."

[dependencies]
om-core = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
