[package]
name = "om-subs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SubtitleProvider adapter wrapping the open-subtitle engine (OpenSubtitles, SubDL, Jimaku, ...)."

[dependencies]
om-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# The open-subtitle engine, pinned to a release tag. These are sibling-workspace
# crates fetched over git (no crates.io publish); the tag keeps the build
# reproducible. om-subs is the only place that names them — the rest of
# open-media stays behind the SubtitleProvider port.
#
# The `version` alongside `git` is required so `cargo package` (which release-plz
# runs for change detection) can verify the manifest — cargo demands a version
# req on every dep when packaging. The `git`+`tag` source always wins for builds;
# the version is never resolved from crates.io (these crates aren't published).
os-core = { version = "0.2.0", git = "https://github.com/grok-insider/open-subtitle", tag = "v0.2.0" }
os-config = { version = "0.2.0", git = "https://github.com/grok-insider/open-subtitle", tag = "v0.2.0" }
os-compose = { version = "0.2.0", git = "https://github.com/grok-insider/open-subtitle", tag = "v0.2.0" }
os-engine = { version = "0.2.0", git = "https://github.com/grok-insider/open-subtitle", tag = "v0.2.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
