[package]
name = "open-media-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-media CLI/TUI binary: the composition root that wires adapters to the engine."

[[bin]]
name = "open-media"
path = "src/main.rs"

[dependencies]
open-media-core = { workspace = true }
open-media-net = { workspace = true }
open-media-config = { workspace = true }
open-media-app = { workspace = true }
# Adapter crates — open-media-cli is the ONLY crate allowed to depend on concrete
# adapters, because it is the composition root (DIP).
open-media-metadata = { workspace = true }
open-media-sources = { workspace = true }
open-media-debrid = { workspace = true }
open-media-stream = { workspace = true }
open-media-player = { workspace = true }
open-media-subs = { workspace = true }
open-media-track = { workspace = true }
open-media-history = { workspace = true }
open-media-telemetry = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
# Terminal image protocols (kitty/sixel/iTerm2) for episode stills + posters.
# default-features off to drop the optional libchafa C dependency; the built-in
# unicode-halfblocks fallback covers terminals without a graphics protocol.
# `image` is decode-only (JPEG/PNG/WebP — what TMDB/Cinemeta/AniList serve);
# stills are fetched over the shared workspace reqwest client.
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { workspace = true }
serde_json = { workspace = true }
# MAL OAuth: PKCE verifier + state randomness (uuid is already a workspace dep).
uuid = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = "3"

[lints]
workspace = true
