[package]
name = "open-media-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MetadataProvider adapters: TMDB + Cinemeta (keyless) for movies/series, AniList for anime."

[dependencies]
open-media-core = { workspace = true }
open-media-net = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }
# `time` only: the Jikan client paces its page loop with `tokio::time::sleep`
# to respect the ~3 req/s rate limit (mirrors om-track's aniskip enricher).
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
