[package]
name = "open-media-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Shared HTTP client factory (timeouts + UA) and a bounded backoff retry helper for the network adapters."

[dependencies]
open-media-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }

[lints]
workspace = true
