[package]
name = "open-media-player"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Player adapters: mpv (with JSON IPC control) and vlc (launch-only)."

[dependencies]
open-media-core = { workspace = true }
async-trait = { workspace = true }
which = "6"
tokio = { workspace = true, features = ["process", "net", "io-util", "time", "sync"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"

[lints]
workspace = true
