[package]
name = "open-media-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "SourceProvider adapters: Torrentio (all media) and direct nyaa.si (anime)."

[dependencies]
open-media-core = { workspace = true }
open-media-net = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
quick-xml = { workspace = true }
tracing = { workspace = true }
# `time`: pace nyaa GETs and back off on 429/503 (no higher public rate tier).
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
