[package]
name = "open-media-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "StreamResolver: hybrid debrid/P2P resolution + the local librqbit stream server."

[dependencies]
open-media-core = { workspace = true }
async-trait = { workspace = true }
# `rust-tls` swaps reqwest→rustls AND the sha1 backend→ring, so librqbit needs no
# system/compiled OpenSSL. `http-api` enables the built-in axum stream server
# (Range-aware `/torrents/{id}/stream/{file_idx}`); it is NOT in default features.
librqbit = { version = "8.1", default-features = false, features = [
    "rust-tls",
    "http-api",
    "tracing-subscriber-utils",
] }
# librqbit's http-api deserializes `Arc<str>`, which needs serde's `rc` feature.
serde = { workspace = true, features = ["rc"] }
tokio = { workspace = true, features = ["rt", "net", "time", "sync", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }

[lints]
workspace = true
