[package]
name = "open-media-subs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SubtitleProvider adapter wrapping the open-subtitle engine (OpenSubtitles, SubDL, Jimaku, ...)."

[dependencies]
open-media-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# The open-subtitle engine, consumed from crates.io. The crates are published
# under `open-subtitle-*` (the generic `os-*` names are taken by unrelated crates),
# but imported here as `os_core`/`os_config`/… via the `package = …` rename, so
# the rest of open-media-subs is unchanged. open-media-subs is the only place that names them — the
# rest of open-media stays behind the SubtitleProvider port.
#
# Registry (not git) deps are what let `cargo package` — which release-plz runs for
# change detection — resolve them, so open-media-subs is no longer excluded from releases.
os-core = { package = "open-subtitle-core", version = "0.2.1" }
os-config = { package = "open-subtitle-config", version = "0.2.1" }
os-compose = { package = "open-subtitle-compose", version = "0.2.1" }
os-engine = { package = "open-subtitle-engine", version = "0.2.1" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
