[package]
name = "open-media-subs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "SubtitleProvider adapter wrapping the open-subtitle engine (OpenSubtitles, SubDL, Jimaku, ...)."

[dependencies]
open-media-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# open-subtitle engine via git (org policy: no crates.io for shipper crates).
# Pin rev deliberately when bumping; refresh with cargo update after rev change.
# package= renames keep `use os_core::…` imports stable.
os-core = { package = "open-subtitle-core", git = "https://github.com/grok-insider/open-subtitle", rev = "ebcb327c7288d3233aac4ff84551a22341d51106" }
os-config = { package = "open-subtitle-config", git = "https://github.com/grok-insider/open-subtitle", rev = "ebcb327c7288d3233aac4ff84551a22341d51106" }
os-compose = { package = "open-subtitle-compose", git = "https://github.com/grok-insider/open-subtitle", rev = "ebcb327c7288d3233aac4ff84551a22341d51106" }
os-engine = { package = "open-subtitle-engine", git = "https://github.com/grok-insider/open-subtitle", rev = "ebcb327c7288d3233aac4ff84551a22341d51106" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
