[package]
name = "open-media-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Anonymous, opt-out usage analytics adapter (active-install counting)."

[dependencies]
open-media-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }

[lints]
workspace = true
