[package]
name = "open-media-track"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Tracker (AniList/MAL/composite), Enricher (AniSkip/Jikan), and Discord presence."

[dependencies]
open-media-core = { workspace = true }
open-media-net = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
